| Bug #8651 | select cast(sum(distinct ff) as decimal(5,2)) from t2; in PS crashes | ||
|---|---|---|---|
| Submitted: | 21 Feb 2005 15:54 | Modified: | 21 Feb 2005 16:04 |
| Reporter: | Alexey Botchkov | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S3 (Non-critical) |
| Version: | OS: | ||
| Assigned to: | Alexey Botchkov | CPU Architecture: | Any |
[21 Feb 2005 15:54]
Alexey Botchkov
[21 Feb 2005 16:04]
Alexey Botchkov
bk commit - 5.0 tree (hf:1.1884) BUG#8651
[21 Feb 2005 16:04]
Alexey Botchkov
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
