Fix for bug #8651 (cast(sum(distinct) as decimal) crashes the server)